       + tail(): marked as deprecated (#228)
       + sort_array() will sort in-place instead of a copying the array first,
         if the array is passed as reference. (#224)
       + to_struct() can convert a struct into another one if one of them is
         a (indirect) base of the other. (#646)
       + clone_object() does not deactivate an active heart_beat in a 
         blueprint. (#747)

    - Runtime
       + A base struct is recorded as base struct in a child struct even if
         the base struct has no members. (#695)
       + Improved the determination of the drivers current_time which fixes
         issues with wrongly timed heart_beats or apparantly wrong timings.
         (e.g. #743)

    - Networking
       + UDP datagrams with lengths up to 65507 (including UDP and IPv4
         headers: 65535) bytes are supported.

30-May-2009 (LDMud Team) -- 3.3.719
    - Fixed Crashes:
       + gmtime(), localtime(), ctime() and strftime() could crash the driver
         on platforms where time_t is 64 bits long and users supply huge
         values as time stamp (>2^55) due to unchecked results from libc
         functions (Bug #587).
       + Fixed a bug in esbrk() during memory allocation, where SINT
         (sizeof(word_t)) was not taken into account in the calculation of a
         block size, leading to crashes afterwards. (#611)

    - New Efuns:
       + configure_interactive(): To set options for interactives.
       + configure_driver(): To set settings/options for the driver itself.

    - Changed Efuns:
       + idna_stringprep(): fixed the evaluation of the arguments and removed
         a memory leak (#498).
       + map(): it's now possible to specify a mapping column when mapping
         through mappings (#367)
       + tls_check_certificate(), tls_refresh_certs(): Now available if
         GnuTLS is supported.
       + hash() and hmac() is now always available und is able to use OpenSSL,